--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "socketiobackend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "Adegbite Joshua",
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
